--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 <body>
     <!----------------------------------------    header   ---------------------------------------->
     <header id="header" class="">
-        <h1><a href="">食汇源饭店</a></h1>
-        <ul>
-            <li><a href="">首页</a></li>
-            <li><a href="">我的订单</a></li>
-            <li><a href="">电话订餐</a></li>
-        </ul>
-        <a href="" class="userInfo">凯旋</a>
+        <div class="inner">
+            <h1><a href="">食汇源饭店</a></h1>
+            <ul>
+                <li><a href="">首页</a></li>
+                <li><a href="">我的订单</a></li>
+                <li><a href="">电话订餐</a></li>
+            </ul>
+            <a href="" class="userInfo">凯旋</a></div>
     </header>
     <!----------------------------------------    /header   ---------------------------------------->
-
     <!----------------------------------------    goto   ---------------------------------------->
     <div class="goto">
         <ul>
@@ -33,8 +33,6 @@
         </ul>
     </div>
     <!----------------------------------------    /goto   ---------------------------------------->
-
-
     <!----------------------------------------    shopInfo   ---------------------------------------->
     <div class="shopInfo">
         <div class="inner">
@@ -68,14 +66,44 @@
     <!----------------------------------------    sortBox   ---------------------------------------->
     <div class="sortBox">
         <div class="inner">
-            <ul>
-                <li class="curren">所有商品</li>
+            <ol class="sideNav">
+                <li class="curren">热销</li>
+                <li>本店特色</li>
+                <li>女神养颜粥</li>
+                <li>提神营养粥</li>
+                <li>海鲜宴</li>
+                <li>素食主义者</li>
+                <li>川粤蒸品</li>
+                <li>佐食小菜</li>
+                <li>特色点心</li>
+                <li>金樽甘露</li>
+                <li>塞红杏川菜</li>
+                <li>一碗好米</li>
+            </ol>
+            <ul class="searchBar">
+                <li class="curren">
+                    所有商品
+                    <ul class="allCate inner">
+                        <li class="curren">热销</li>
+                        <li>本店特色</li>
+                        <li>女神养颜粥</li>
+                        <li>提神营养粥</li>
+                        <li>海鲜宴</li>
+                        <li>素食主义者</li>
+                        <li>川粤蒸品</li>
+                        <li>佐食小菜</li>
+                        <li>特色点心</li>
+                        <li>金樽甘露</li>
+                        <li>塞红杏川菜</li>
+                        <li>一碗好米</li>
+                    </ul>
+                </li>
                 <li>评价</li>
                 <li>关于我店</li>
             </ul>
             <div class="searchBox">
                 <input type="text" class="search" placeholder="搜索美食..." />
-                <button type=""  class="iconfont icon-sousuo"></button>
+                <button type="" class="iconfont icon-sousuo"></button>
             </div>
             <ol>
                 <li class="curren">默认排序</li>
@@ -87,47 +115,11 @@
         </div>
     </div>
     <!----------------------------------------    /sortBox   ---------------------------------------->
-    <!----------------------------------------    menu   ---------------------------------------->
-    <div class="menu inner">
-        <ul>
-            <li class="curren">热销</li>
-            <li>本店特色</li>
-            <li>女神养颜粥</li>
-            <li>提神营养粥</li>
-            <li>海鲜宴</li>
-            <li>素食主义者</li>
-            <li>川粤蒸品</li>
-            <li>佐食小菜</li>
-            <li>特色点心</li>
-            <li>金樽甘露</li>
-            <li>塞红杏川菜</li>
-            <li>一碗好米</li>
-        </ul>
-        <ol class="sideNav">
-            <li class="curren">热销</li>
-            <li>本店特色</li>
-            <li>女神养颜粥</li>
-            <li>提神营养粥</li>
-            <li>海鲜宴</li>
-            <li>素食主义者</li>
-            <li>川粤蒸品</li>
-            <li>佐食小菜</li>
-            <li>特色点心</li>
-            <li>金樽甘露</li>
-            <li>塞红杏川菜</li>
-            <li>一碗好米</li>
-        </ol>
-    </div>
-    <!----------------------------------------    /menu   ---------------------------------------->
     <!----------------------------------------    floor   ---------------------------------------->
     <div class="floorBox">
         <div class="inner">
             <div class="floor"></div>
-
-
-
-
-<script type="text/html" id="floor">
+            <script type="text/html" id="floor">
                 {{each data as floorItem}}
                 <h3>
                     {{floorItem.name}}
@@ -152,11 +144,6 @@
                 </ul>
                 {{/each}}
             </script>
-
-
-
-
-
         </div>
     </div>
     <!----------------------------------------    /floor   ---------------------------------------->
