--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/index.css">
     <link rel="stylesheet" type="text/css" href="/font/iconfont.css">
     <script type="text/javascript" src="lib/requirejs/require.js" data-main="js/index"></script>
+    <script src="js/index.js"></script>
     <title>凯-Dome</title>
 </head>
 
@@ -29,7 +29,7 @@
         <ul>
             <li><i class="iconfont icon-wo"></i></li>
             <li><i class="iconfont icon-gouwuchekong"></i></li>
-            <li class="goToTop"><i class="iconfont icon-dingbu"></i></li>
+            <li><i class="iconfont icon-dingbu"></i></li>
         </ul>
     </div>
     <!----------------------------------------    /goto   ---------------------------------------->
@@ -107,8 +107,8 @@
         <div class="inner">
             <div class="floor"></div>
             <script type="text/html" id="floor">
-                {{each data as floorItem i}}
-                <h3 class="floorHeader" data-id =  {{i}} >
+                {{each data as floorItem}}
+                <h3>
                     {{floorItem.name}}
                     <span>{{floorItem.floor.floorInfo}}</span>
                 </h3>
@@ -171,7 +171,8 @@
         </div>
     </footer>
     <!----------------------------------------    /footer   ---------------------------------------->
-
+    <script type="text/javascript">
+    </script>
 </body>
 
 </html>
